blender 2.8 - hard crash - editing shape keys weirdness with instances #58652

Closed
opened 2018-12-03 22:24:22 +01:00 by Carlo Andreacchio · 11 comments

System Information
Operating system: Linux 17.10
Graphics card:GTX 1080

Blender Version
Broken: f0432e37ab

Short description of error
There is shape key weirdness with editing shape keys, with the object being instanced

Exact steps for others to reproduce the error

These keys assume the blender 2.79 keymap.

Weirdness 1

  1. Open attached blend file
  2. press tab really fast, and you should get a hard crash.

Weirdness 2

  1. Open attached blend file
  2. press tab slowly, and sometimes Cube.002 disappears from the viewport, or looks massively deformed but nothign has changed

Weirdness 3

  1. Open attached blend file
  2. press g and drag a vertice really far away fast and get a hardcrash / lockup

Sorry, key forgetting to upload the test filecrash.blend

**System Information** Operating system: Linux 17.10 Graphics card:GTX 1080 **Blender Version** Broken: f0432e37ab **Short description of error** There is shape key weirdness with editing shape keys, with the object being instanced **Exact steps for others to reproduce the error** These keys assume the blender 2.79 keymap. Weirdness 1 1) Open attached blend file 2) press tab really fast, and you should get a hard crash. Weirdness 2 1) Open attached blend file 2) press tab slowly, and sometimes Cube.002 disappears from the viewport, or looks massively deformed but nothign has changed Weirdness 3 1) Open attached blend file 2) press g and drag a vertice really far away fast and get a hardcrash / lockup Sorry, key forgetting to upload the test file![crash.blend](https://archive.blender.org/developer/F5804383/crash.blend)

Added subscriber: @candreacchio

Added subscriber: @candreacchio

#58893 was marked as duplicate of this issue

#58893 was marked as duplicate of this issue
Carlo Andreacchio changed title from blender 2.8 - editing shape keys weirdness with instances to blender 2.8 - hard crash - editing shape keys weirdness with instances 2018-12-03 22:38:20 +01:00

Added subscribers: @Sergey, @dfelinto

Added subscribers: @Sergey, @dfelinto
Sergey Sharybin was assigned by Dalai Felinto 2018-12-07 02:00:56 +01:00

@Sergey this file is much faster to crash reliably here (see weirdness 1 for instructions). It seems the same error as #58893.
Here at some point I got data llocated by T.17, freed by T.12, and with a read error by T.16,

SUMMARY: AddressSanitizer: heap-use-after-free //source/blender/blenkernel/intern/mesh_runtime.c:184 in BKE_mesh_runtime_clear_edit_data
Full ASAN crash: P863

@Sergey this file is much faster to crash reliably here (see weirdness 1 for instructions). It seems the same error as #58893. Here at some point I got data llocated by T.17, freed by T.12, and with a read error by T.16, SUMMARY: AddressSanitizer: heap-use-after-free //source/blender/blenkernel/intern/mesh_runtime.c:184 in BKE_mesh_runtime_clear_edit_data Full ASAN crash: [P863](https://archive.blender.org/developer/P863.txt)

This issue was referenced by 7e6288cfe6

This issue was referenced by 7e6288cfe66096c55fe4bad8421507ed71ae769f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

Hi Sergey,

I have just tried it on ea33b90a1b and Items 1 and 3 are still valid (hard crash).

Sorry to reopen tickets, but its the exact same problem.

Hi Sergey, I have just tried it on ea33b90a1b and Items 1 and 3 are still valid (hard crash). Sorry to reopen tickets, but its the exact same problem.

Probably was re-introduced by d3e0d7f082. Would need to have a closer look and ensure that LIB_ID_COPY_RUNTIME is only used inside of the modifier stack, but not when creating mesh for the first result.
Tomorrow is more fixes :)

Probably was re-introduced by d3e0d7f082. Would need to have a closer look and ensure that `LIB_ID_COPY_RUNTIME` is only used inside of the modifier stack, but not when creating mesh for the first result. Tomorrow is more fixes :)

This issue was referenced by a84c823b89

This issue was referenced by a84c823b891fcf440e134eb284024ea06aa1a9ff

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58652
No description provided.