Fix T58652: Crash editing shape keys weirdness with instances