source/blender/blenkernel/intern/particle_distribute.c
@@ -925,8 +925,7 @@ static int psys_thread_context_init_distribute(ParticleThreadContext *ctx, Parti
 			            LIB_ID_CREATE_NO_MAIN |
 			            LIB_ID_CREATE_NO_USER_REFCOUNT |
 			            LIB_ID_CREATE_NO_DEG_TAG |
-			            LIB_ID_COPY_NO_PREVIEW |
-			            LIB_ID_COPY_RUNTIME,
+			            LIB_ID_COPY_NO_PREVIEW,
 			            false);
 
 		BKE_mesh_tessface_ensure(mesh);
